# meh

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  compile.sh
include/: colors.h
src/: meh.cpp
